fix: Remove overflow causing horizontal scroll bar

--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -6,6 +6,7 @@ body, html {
     margin: 0px 0px;
     padding: 0px 0px;
     font-weight: 400;
+    overflow-x: hidden;
 }
 
 a,
